<resources>
    <string name="app_name">NASA Asteroid</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>

    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="explanation_button_description">Astronomical unit explanation</string>
    <string name="astronomical_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>

    <string name="astronomical_unit_format" translatable="false">%f au</string>
    <string name="km_unit_format" translatable="false">%f km</string>
    <string name="km_s_unit_format" translatable="false">%f km/s</string>
    <string name="isHazardous">Potentially hazardous</string>
    <string name="isSafe">Not hazardous</string>
    <string name="pictureError">No image Today</string>

</resources>